src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 5.9% 10%;
  }

  .dark {
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;
    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
  }

  * {
    @apply border-border selection:bg-primary-light selection:text-primary dark:selection:bg-white/10 dark:selection:text-white;
  }

  html {
    @apply scroll-smooth;
  }

  body {
    @apply bg-white text-primary antialiased dark:bg-[#000000] dark:text-white;
    font-feature-settings: "ss01", "ss02", "cv01", "cv02", "cv03";
  }
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
  
  .glass {
    @apply backdrop-blur-xl bg-white/80 dark:bg-black/20 supports-[backdrop-filter]:bg-white/20;
  }

  .text-glow {
    @apply dark:text-white dark:drop-shadow-[0_0_15px_rgba(255,255,255,0.5)];
  }

  .heading-glow {
    @apply dark:text-white 
    dark:drop-shadow-[0_0_20px_rgba(249,115,22,0.7)]
    dark:drop-shadow-[0_4px_20px_rgba(14,165,233,0.7)]
    dark:drop-shadow-[0_0_40px_rgba(249,115,22,0.4)]
    dark:drop-shadow-[0_4px_40px_rgba(14,165,233,0.4)];
  }
}

.reveal {
  opacity: 0;
  transform: translateY(20px);
}

.reveal.active {
  opacity: 1;
  transform: translateY(0);
  transition: all 0.8s ease;
}

